Add debug log option to save server logs
See [WINK-60]

git-svn-id: https://svn.apache.org/repos/asf/incubator/wink/trunk@814404 13f79535-47bb-0310-9956-ffa450edef68